tests/repl/errors/runtime_errors.repl
#@ session: runtime_errors
#@ description: Test runtime error handling

# Simple expressions work
>>> 10 / 2
=> 5

>>> 3 + 4
=> 7
